argocd/services/temporal/base/temporal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal
  labels:
    app: temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal
  template:
    metadata:
      labels:
        app: temporal
    spec:
      containers:
        - name: temporal
          image: temporalio/auto-setup:1.26.2
          ports:
            - containerPort: 7233
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
