argocd/services/temporal/base/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui
  labels:
    app: temporal-ui
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: temporal-ui
  selector:
    app: temporal-ui
