argocd/services/temporal/base/ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal-ui
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - temporal.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: temporal-ui
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
